# rust-menu

./: Cargo.toml
src/: main.rs
